<?xml version="1.0"?>
<package format="3">
  <name>pointfoot_highlevel</name>
  <version>1.0.0</version>
  <description>pointfoot_highlevel</description>
  <maintainer email="limx@limxdynamics.com">limxdynamics</maintainer>
  <license>TODO</license>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <buildtool_depend    condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend    condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend              condition="$ROS_VERSION == 1">roscpp</depend>
  <depend              condition="$ROS_VERSION == 2">rclcpp</depend>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
